<resources>
    <string name="app_name">Fraccionamiento</string>
    <string name="login">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="staring_session">Iniciando Sesión</string>
    <string name="not_authenticaed">Error al iniciar sesión</string>
    <string name="title_activity_main_admin">MainAdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Usuarios</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Administrar</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="information">Información</string>
    <string name="about">Acerca de ...</string>
    <string name="this_app">Esta app</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="error_empty_field">Este campo no puede estar vacío</string>
    <string name="error">Error</string>
    <string name="warning">Atención</string>
    <string name="fatal_error_login">Hubo un error al intenar iniciar sesión. Por favor intente iniciar sesión más tarde</string>
    <string name="invalid_credentials">Usuario o contraseña no validos</string>
    <string name="ok">Ok</string>
    <string name="search">Buscar...</string>
    <string name="no_element_found">No se encontrarón elementos</string>
    <string name="name">name</string>
    <string name="last_name">lastName</string>
    <string name="add_new_user">Agregar Usuario</string>
    <string name="name_spanish">Nombre</string>
    <string name="last_name_spn">Apellidos</string>
    <string name="name_span">Nombre</string>
    <string name="email_spn">Correo</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="refill_data">Llena los siguientes campos</string>
    <string name="cancel">Cancelar</string>
    <string name="edit_data">Edita los datos requeridos</string>
    <string name="edit_user">Editar Usuario</string>
    <string name="reset_password">Reestablecer contraseña</string>
    <string name="save">Guardar</string>
    <string name="drop_user">Eliminar Usuario</string>
    <string name="fatal_error">A ocurrido un error inesperado</string>
    <string name="successfull_user_add">Usuario agregado correctamente</string>
    <string name="already_user">El usuario ya existe</string>
    <string name="pass_not_match">Las contraseñas no conciden</string>
    <string name="minor_7">Minímo 7 caracteres</string>
    <string name="add_user_info_title">Agregar información del Usuario</string>
    <string name="build">Edificio</string>
    <string name="department">Departamento</string>
    <string name="rent_cost_month">Costo de renta mensual</string>
    <string name="price_symbol">$</string>
    <string name="monthly_maintenance_cost">Costo de mantenimento mensual</string>
    <string name="complete_register">Completar registro</string>
    <string name="register_completed">Registro completado con exito</string>
    <string name="user_added">Usuario agregado</string>
    <string name="price_hint">0.00</string>
    <string name="creating_user">Agregando usuario ...</string>
    <string name="adding_info_user">Agreagando información del usuario ...</string>
    <string name="uploading_data">Subiendo información ...</string>
    <string name="arrived_day">Día de arribo ej. "11"</string>
    <string name="day">Día</string>
    <string name="month">Més</string>
    <string name="year">Año</string>
    <string name="total_pay">Total a pagar:</string>
    <string name="date_pay">Fecha límite de pago:</string>
    <string name="currently_money">Saldo actual:</string>
    <string name="payed">Pagado</string>
    <string name="not_payed">Adeudo</string>
    <string name="balance">Saldo</string>
    <string name="mount_debt">Adeudo: $</string>
    <string name="receipts">Recibos</string>
    <string name="payments">Pagos</string>
    <string name="check_as_payed">¿Marcar como pagado?</string>
    <string name="user_payments_info">Pagos del usuario</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="successfully_updated_info">Información actualizado con exíto</string>
    <string name="warning_info">Atención esta operación es irreversible, proceda con precaución</string>
    <string name="home_page">Página principal\ndel cliente</string>
    <string name="home_page_admin">Página principal\ndel Administrador</string>
    <string name="cut_day">Corte</string>
    <string name="user_info">Información del Usuario</string>
    <string name="error_empty_fields">Ningún campo puede estar vacío</string>
    <string name="updated_data">Usuario actualizado con exíto</string>
    <string name="fail_updated_data">Error intente en otro momento</string>
    <string name="deleted_data">Usuario eliminado con exíto</string>
    <string name="error_deleted_data">Error, intente en otro momento</string>
    <string name="atention">¡Atención!</string>
    <string name="delete_user_message">Estas apunto de eliminar un usuario de forma permanente.\n¿Deseas continuar?</string>
    <string name="deleting_user">Eliminando usuario...</string>
    <string name="type_user_quest">¿Que tipo de usuario deseas agregar?</string>
    <string name="menu_calendar">Reuniones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_calendar">Título de la reunión</string>
    <string name="calendar_description">Descripción de la reunión</string>
    <string name="double_colon"> : </string>
    <string name="zero">" 0 "</string>
    <string name="calendar_hour">Hora de la reuninón</string>
    <string name="add_calendar">Agendar Reunión</string>
    <string name="calendar_date">Fecha de la reunión</string>
    <string name="slash">" / "</string>
    <string name="to">a las</string>
    <string name="title_activity_calendar_client">CalendarClientActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="notifications_checked">Marcar todo como leído</string>
    <string name="notifications_clear">Eliminar notificaciones</string>
    <string name="notification">Notificaciones</string>
    <string name="new_notification">Se ha generado una nueva reunión:</string>
    <string name="my_profile">Mi perfil</string>
    <string name="email">Correo electrónico</string>
    <string name="user_info_updated">Información actualizada con éxito</string>
    <string name="user_info_failed_updated">No se pudo actualiza, intente más tarde</string>
    <string name="udapte_user_info">Actualizar Información</string>
    <string name="select_application">Seleccione la aplicación</string>
    <string name="success_upload_image">Imagen cargada con éxito</string>
    <string name="error_loading_image">Error al cargar imagen, intentelo más tarde</string>
    <string name="delete_calendar_mensaje">¿Estas seguro que deseas eliminar esta reunión?</string>
</resources>
