<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Client.MainActivity"
    android:gravity="center_horizontal|center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:text="@string/total_pay"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/rubik_bold"
            android:textColor="@android:color/black"
            android:textSize="80sp"
            android:text="@string/price_symbol"/>
        <TextView
            android:id="@+id/txtQuantityPay"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:textColor="@android:color/black"
            android:textSize="80sp"
            android:text="@string/price_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:text="@string/date_pay"/>
        <TextView
            android:id="@+id/txtPayDate"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>