<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_span"
        android:fontFamily="@font/rubik_medium"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"/>


    <EditText
        android:id="@+id/txtEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_span"
        android:textSize="18sp"
        android:fontFamily="@font/rubik_light"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_spn"
        android:fontFamily="@font/rubik_medium"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"/>


    <EditText
        android:id="@+id/txtEditUserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_spn"
        android:textSize="18sp"
        android:fontFamily="@font/rubik_light"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_spn"
        android:fontFamily="@font/rubik_medium"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"/>


        <TextView
            android:id="@+id/txtEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_spn"
            android:textSize="18sp"
            android:fontFamily="@font/rubik_light"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"/>


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rent_cost_month"
        android:fontFamily="@font/rubik_medium"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"/>


    <TextView
        android:id="@+id/txtEditRent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rent_cost_month"
        android:textSize="18sp"
        android:fontFamily="@font/rubik_light"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_maintenance_cost"
        android:fontFamily="@font/rubik_medium"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"/>


    <TextView
        android:id="@+id/txtEditMaintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/monthly_maintenance_cost"
        android:textSize="18sp"
        android:fontFamily="@font/rubik_light"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build"
                android:fontFamily="@font/rubik_medium"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/txtEditBuild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/build"
                android:textSize="18sp"
                android:fontFamily="@font/rubik_light"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:fontFamily="@font/rubik_medium"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/txtEditDept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/department"
                android:textSize="18sp"
                android:fontFamily="@font/rubik_light"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cut_day"
                android:fontFamily="@font/rubik_medium"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:id="@+id/txtEditDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cut_day"
                android:textSize="18sp"
                android:fontFamily="@font/rubik_light"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

    </LinearLayout>
        <Button
            android:id="@+id/btnEditUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            android:textColor="@android:color/white"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/udapte_user_info"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            />
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarProfile"
        style="@style/app_bar_style"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/profile_image_anchor"
                android:layout_height="@dimen/profile_image_anchor"
                android:src="@drawable/ic_profile"
                app:civ_border_color="@color/colorText"
                app:civ_border_width="@dimen/star_padding"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/profileFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_components"
                android:gravity="center_horizontal"
                android:text="@string/email"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>